	* BUGFIX - Command line switches beyond the first one are now parsed properly
	* BUGFIX - Rare problem of undo system ignoring a changed pixel is now eliminated
	* BUGFIX - Canvas window now doesn't lose mouse button press event if dock window has focus
	* BUGFIX - Problem with command line window wrongly reacting to mouse in some cases is now eliminated

3.40	2011-12-30

	* Tagalog translation added by Anjelo delCarmen
	* Hungarian translation added by Ur Balazs
	* Czech translation updated by Roman Hornik
	* German translation updated by B. Clausius
	* Italian translation updated by Angelo Gemmi
	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Eriksson
	* Spanish translation updated by Adolfo Jayme
	* Brazilian Portuguese translation updated by Valter Nazianzeno
	* Chinese (Simplified) translation updated by Cecc
	* Russian translation updated
	* Eliminated flicker when positioning line, polygon side, or gradient in Windows version
	* Scrolling made more smooth in Windows version
	* Dock area now holds settings toolbar and layers dialog when their windows are closed
	* Main toolbar and tools toolbar now rearrange themselves to fit in window
	* Preferences window now has scrollbars when screen is too small to display it whole
	* The preview button on the colour selectors is now a toggle to enable interactive previews
	* Line tool now displays geometry info on the status bar
	* Gaussian blur effect now faster by 20-35%
	* Image scaling now faster by 10-35%
	* "Protect details" toggle added to Kuwahara-Nagao blur
	* Image scaling, Gaussian blur, Unsharp mask and Difference of Gaussians effects now use multithreading to utilize all available CPU cores
	* Moving the pointer with the arrow keys now scrolls the canvas when moving beyond the viewport
	* Dragging selection frame in canvas window, layer in view window, or colour in palette window, beyond the viewport now scrolls the window